--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
-minecraft_version=24w21b
-yarn_mappings=24w21b+build.3
+minecraft_version=1.21-pre1
+yarn_mappings=1.21-pre1+build.2
 loader_version=0.15.11
 
 # Mod Properties
